<resources>
    <string name="app_name">Food Runner</string>
    <string name="food_runner">FoodRunner</string>
    <string name="mobile_number_10_digits">Mobile Number (10 Digits)</string>
    <string name="password">Password</string>
    <string name="app_logo">It is a app logo.</string>
    <string name="login">Login</string>
    <string name="forget_password">
        <u>Forget Password?</u>
    </string>
    <string name="sign_up">
        Don\'t have an account? <u><b>Sign Up now</b></u>
    </string>
    <string name="registration">Registration</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="birthday">Birthday</string>
    <string name="password_min">Password (Min 5 Characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="forget_password_page">Forget Password</string>
    <string name="new_pass_change">Enter your registered mobile number and new password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="change_password">Change Password</string>
    <string name="preference_file_name">Food Runner Preference</string>
    <string name="logout">Logout</string>
    <string name="home_drawer">Home</string>
    <string name="profile_drawer">Profile</string>
    <string name="favorites_drawer">Favorites</string>
    <string name="faqs_drawer">FAQs</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rupee">₹</string>
    <string name="order_history">Order History</string>
    <string name="username">Username</string>
    <string name="username_profile">UserName</string>
    <string name="mobile_number_profile">0123456789</string>
    <string name="email_profile">Email</string>
    <string name="address_profile">Address</string>
    <string name="name_register">Name</string>
    <string name="email_register">Email Address</string>
    <string name="address_register">Address</string>
    <string name="email_forget_password">Email</string>
    <string name="next">Next</string>
    <string name="enter_the_received_otp_here">Enter the received OTP here</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
    <string name="you_do_not_have_order_history">You do not have order history</string>
    <string name="you_do_not_have_favourite_restaurants">You do not have favourite restaurants</string>
    <string name="choose_from_the_menu_listed_below">Choose from the menu listed below:</string>
    <string name="dish_name">Dish Name</string>
    <string name="_1">1</string>
    <string name="dish_cost">60</string>
    <string name="add">Add</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="name_of_restaurant">Name of Restaurant</string>
    <string name="_100">100</string>
    <string name="person">/person</string>
    <string name="_4_5">4.5</string>
    <string name="remove">Remove</string>
    <string name="ordering_from">Ordering From:</string>
    <string name="restaurant_name_cart">Restaurant Name</string>
    <string name="place_order_total_rs_0">Place Order(Total: Rs. 0)</string>
    <string name="list">_</string>
    <string name="dish_name_cart">Dish Name</string>
    <string name="rs">Rs.</string>
    <string name="cost_cart">100</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="okay">Okay</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="date">03/07/2020</string>
</resources>