<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/it_drawer_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home_drawer" />

        <item
            android:id="@+id/it_drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile_drawer" />

        <item
            android:id="@+id/it_drawer_favorites"
            android:icon="@drawable/ic_favorites_solid"
            android:title="@string/favorites_drawer" />

        <item
            android:id="@+id/it_drawer_order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/order_history"/>

        <item
            android:id="@+id/it_drawer_faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/faqs_drawer" />
    </group>
</menu>