<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activity.ForgetPassword">

    <Toolbar
        android:id="@+id/tb_forget_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:title="@string/forget_password_page" />

    <ImageView
        android:id="@+id/img_app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/tb_forget_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/border"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/txt_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_app_logo"
        android:layout_centerInParent="true"
        android:text="@string/food_runner"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_new_pass_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_app_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/new_pass_change"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_mobile_number_for_forget_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/txt_new_pass_change"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edit_text"
        android:drawableEnd="@drawable/ic_phone"
        android:hint="@string/mobile_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/et_email_forget"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/et_mobile_number_for_forget_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/bg_edit_text"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/email_forget_password"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_next"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_email_forget"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>