<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_margin="6dp"
    android:background="@color/white"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/llContentRestaurantDetail"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/txtDishId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1"
            android:textSize="17sp" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5">

            <TextView
                android:id="@+id/txtDishName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/dish_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rupee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rupee"
                android:textSize="18sp"
                android:layout_below="@id/txtDishName"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/txtDishCostForOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dish_cost"
                android:textSize="18sp"
                android:layout_toEndOf="@id/rupee"
                android:layout_below="@id/txtDishName"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"/>

        </RelativeLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1.5"
            android:text="@string/add"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>