<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".activity.LoginActivity"
    android:id="@+id/act_login">

    <ImageView
        android:id="@+id/img_app_logo_login"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:transitionName="app_logo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/txt_app_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_runner"
        android:transitionName="app_name"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_centerInParent="true"
        android:layout_below="@id/img_app_logo_login"/>

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edit_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_mobile"
        android:hint="@string/mobile_number_10_digits"
        android:textColor="@color/grey"
        android:textSize="17sp"
        android:layout_below="@id/txt_app_name_login"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edit_text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:hint="@string/password"
        android:textColor="@color/grey"
        android:textSize="17sp"
        android:layout_below="@id/et_mobile_number"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/txt_forget_password"
        android:layout_width="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        style=""
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txt_register"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        style=""
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

</RelativeLayout>