<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangePassword"
    android:background="@color/colorAccent">

    <Toolbar
        android:id="@+id/tb_forget_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        android:title="@string/change_password"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"/>

    <TextView
        android:id="@+id/txtOpt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_the_received_otp_here"
        android:textSize="20sp"
        android:layout_below="@id/tb_forget_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etOtp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/txtOpt"
        android:layout_marginTop="30dp"
        android:hint="@string/otp_4_characters"
        android:inputType="number"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edit_text"
        android:drawableEnd="@drawable/ic_notification"/>

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/etOtp"
        android:layout_marginTop="30dp"
        android:hint="@string/new_password_min_4_characters"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edit_text"
        android:drawableEnd="@drawable/ic_lock"/>

    <EditText
        android:id="@+id/etConfirmNewPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/etNewPassword"
        android:layout_marginTop="30dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_edit_text"
        android:drawableEnd="@drawable/ic_lock"/>


    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="360dp"
        android:layout_height="55dp"
        android:layout_below="@id/etConfirmNewPassword"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="20sp"/>

</RelativeLayout>