<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/white"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/llCartContent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:id="@+id/txtList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="-30dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:text="@string/list"
            android:textColor="@color/colorPrimary"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtDishNameCart"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:text="@string/dish_name_cart"
            android:textSize="20sp"
            android:layout_marginStart="5dp"/>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:layout_gravity="center_vertical">

            <TextView
                android:id="@+id/txtRs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rs"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtDishCostCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cost_cart"
                android:textSize="18sp"
                android:layout_toEndOf="@id/txtRs"/>


        </RelativeLayout>
    </LinearLayout>


</androidx.cardview.widget.CardView>