<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/img_app_logo_login"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:transitionName="app_logo"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_logo"
        android:background="@drawable/border"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/txt_app_name_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_runner"
        android:transitionName="app_name"
        android:textStyle="bold"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:paddingTop="5dip"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000"
            android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/header_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:layout_marginStart="7dp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginTop="10dp"/>


</LinearLayout>