<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="6dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
    android:id="@+id/llContent"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:weightSum="6"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/img_restaurant"
        android:layout_weight="1.8"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:src="@drawable/ic_food"
        android:scaleType="centerCrop"/>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3.0">

    <TextView
        android:id="@+id/txt_restaurant_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/name_of_restaurant"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_restaurant_name"
            android:text="@string/rupee"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="italic"
            android:textColor="#388e3c"/>

        <TextView
            android:id="@+id/txt_cost_for_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_restaurant_name"
            android:text="@string/_100"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="italic"
            android:textColor="#388e3c"
            android:layout_marginStart="13dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_restaurant_name"
            android:text="@string/person"
            android:layout_marginTop="15dp"
            android:textSize="18sp"
            android:padding="8dp"
            android:textStyle="italic"
            android:textColor="#388e3c"
            android:layout_marginStart="42dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_fav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:layout_margin="5dp">

    <ImageView
        android:id="@+id/img_favourite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_favorites_border"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:padding="8dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/txt_restaurant_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_below="@id/img_favourite"
        android:drawableStart="@drawable/ic_rating"
        android:textColor="#ffd600"
        android:layout_marginTop="5dp"
        android:text="@string/_4_5"
        android:drawablePadding="4dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    </RelativeLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>