<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Cart">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_cart"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colorAccent" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/txtOrderFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordering_from"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@id/appBarLayout"/>

    <TextView
        android:id="@+id/txtRestaurantNameCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restaurant_name_cart"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:layout_below="@id/appBarLayout"
        android:layout_toEndOf="@id/txtOrderFrom"/>


    <TextView
        android:id="@+id/divider"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="5dip"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:layout_below="@id/txtOrderFrom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginTop="1dp"
        android:layout_above="@id/btnPlaceOrder"/>

    <Button
        android:id="@+id/btnPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/place_order_total_rs_0"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/colorPrimaryDark"
        android:textAllCaps="false" />

</RelativeLayout>